RESOLVED FIXED200759
[JSC] Air does not appropriately propagate ConstFloatValue to stackmap
https://bugs.webkit.org/show_bug.cgi?id=200759
Summary [JSC] Air does not appropriately propagate ConstFloatValue to stackmap
Yusuke Suzuki
Reported 2019-08-14 22:52:30 PDT
[JSC] Air does not appropriately propagate ConstFloatValue to stackmap
Attachments
Patch (9.60 KB, patch)
2019-08-14 23:01 PDT, Yusuke Suzuki
no flags
Patch (9.62 KB, patch)
2019-08-14 23:29 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2019-08-14 23:01:36 PDT
EWS Watchlist
Comment 2 2019-08-14 23:06:38 PDT
Attachment 376357 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/testb3_5.cpp:48: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3_5.cpp:80: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3 2019-08-14 23:29:14 PDT
EWS Watchlist
Comment 4 2019-08-14 23:35:42 PDT
Attachment 376361 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/testb3_5.cpp:48: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3_5.cpp:80: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 5 2019-08-14 23:37:17 PDT
Thanks for review!
Yusuke Suzuki
Comment 6 2019-08-14 23:39:33 PDT
Radar WebKit Bug Importer
Comment 7 2019-08-14 23:40:15 PDT
Note You need to log in before you can comment on or make changes to this bug.